hphp/hack/test/typecheck/construct/missing_init_tany.php.exp
File "missing_init_tany.php", line 15, characters 7-7:
Class `C` does not initialize all of its members; `li` is not always initialized.
Make sure you systematically set `$this->li` when the method `__construct` is called.
Alternatively, you can define the member as nullable with `?YourTypeHere`
 (NastCheck[3015])
